[gd_scene load_steps=19 format=3 uid="uid://bl8iglk1xnwbs"]

[ext_resource type="Script" path="res://Scenes/BattleScenes/battlescene/battlescene.gd" id="1_n8ose"]
[ext_resource type="Script" path="res://Scripts/Managers/BattleManager.gd" id="2_x8hym"]
[ext_resource type="Script" path="res://Scripts/Managers/StateMachine.gd" id="3_n8q0w"]
[ext_resource type="Script" path="res://Scripts/Managers/BattleState/Start.gd" id="4_ah2ow"]
[ext_resource type="Script" path="res://Scripts/Managers/BattleState/Deploy.gd" id="5_lewvu"]
[ext_resource type="Script" path="res://Scripts/Managers/BattleState/Status.gd" id="6_o5pau"]
[ext_resource type="Script" path="res://Scripts/Managers/BattleState/Turn.gd" id="7_v5oy1"]
[ext_resource type="Script" path="res://Scripts/Managers/BattleState/Anim.gd" id="8_mhvo8"]
[ext_resource type="Script" path="res://Scripts/Managers/BattleState/End.gd" id="9_saeub"]
[ext_resource type="Script" path="res://Scripts/Managers/BattleState/Inter.gd" id="10_l5wnu"]
[ext_resource type="PackedScene" uid="uid://b4niqx0ika4y" path="res://Scenes/Battlefields/forest/forest.tscn" id="11_uuj7c"]
[ext_resource type="Script" path="res://Scripts/Spellbook.gd" id="12_ml2tb"]
[ext_resource type="Script" path="res://Scripts/UI/UIManager.gd" id="13_i8apy"]
[ext_resource type="Script" path="res://Scripts/UI/BattleLog.gd" id="14_lgqmy"]
[ext_resource type="Script" path="res://Scripts/Managers/AnimationManager.gd" id="15_27a2c"]
[ext_resource type="Script" path="res://Scripts/Managers/AnimState/Free.gd" id="16_i6t3l"]
[ext_resource type="Script" path="res://Scripts/Managers/AnimState/Ongoing.gd" id="17_o8v8q"]

[sub_resource type="LabelSettings" id="LabelSettings_guiso"]

[node name="BattleScene" type="Node2D"]
script = ExtResource("1_n8ose")

[node name="BackGround" type="ColorRect" parent="."]
offset_left = -352.0
offset_top = -272.0
offset_right = -312.0
offset_bottom = -232.0
scale = Vector2(56.9114, 31.4082)
color = Color(0.101961, 0.180392, 0.0588235, 1)
metadata/_edit_lock_ = true

[node name="BattleManager" type="Node" parent="."]
script = ExtResource("2_x8hym")

[node name="BattleState" type="Node" parent="BattleManager"]
script = ExtResource("3_n8q0w")

[node name="Start" type="Node" parent="BattleManager/BattleState"]
script = ExtResource("4_ah2ow")

[node name="Deploy" type="Node" parent="BattleManager/BattleState"]
script = ExtResource("5_lewvu")

[node name="Status" type="Node" parent="BattleManager/BattleState"]
script = ExtResource("6_o5pau")

[node name="Turn" type="Node" parent="BattleManager/BattleState"]
script = ExtResource("7_v5oy1")

[node name="Anim" type="Node" parent="BattleManager/BattleState"]
script = ExtResource("8_mhvo8")

[node name="End" type="Node" parent="BattleManager/BattleState"]
script = ExtResource("9_saeub")

[node name="Inter" type="Node" parent="BattleManager/BattleState"]
script = ExtResource("10_l5wnu")

[node name="Battlefield" parent="." instance=ExtResource("11_uuj7c")]
layer_0/tile_data = PackedInt32Array(0, 65536, 15, 65536, 196608, 13, 131072, 196608, 13, 196608, 0, 17, 262144, 0, 17, 327680, 131072, 12, 393216, 131072, 12, 1, 65536, 15, 65537, 65536, 15, 131073, 196608, 13, 196609, 0, 17, 262145, 0, 17, 327681, 131072, 12, 393217, 131072, 12, 2, 65536, 15, 65538, 196608, 13, 131074, 196608, 13, 196610, 131072, 15, 262146, 196608, 13, 327682, 131072, 12, 393218, 131072, 12, 3, 65536, 15, 65539, 196608, 13, 131075, 196608, 13, 196611, 196608, 13, 262147, 196608, 13, 327683, 196608, 13, 393219, 196608, 13, 4, 65536, 15, 65540, 196608, 13, 131076, 196608, 13, 196612, 196608, 13, 262148, 196608, 13, 327684, 196608, 13, 393220, 196608, 13, 5, 196608, 13, 65541, 65536, 15, 131077, 196608, 13, 196613, 196608, 13, 262149, 131072, 15, 327685, 196608, 13, 393221, 196608, 13, 6, 65536, 15, 65542, 196608, 13, 131078, 196608, 13, 196614, 196608, 13, 262150, 196608, 13, 327686, 196608, 13, 393222, 196608, 13)

[node name="Spellbook" type="Node" parent="."]
script = ExtResource("12_ml2tb")

[node name="UIManager" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("13_i8apy")

[node name="ActionsContainer" type="VBoxContainer" parent="UIManager"]
layout_mode = 0
offset_left = 592.0
offset_top = 128.0
offset_right = 650.0
offset_bottom = 194.0
scale = Vector2(1.76908, 1.76279)
metadata/_edit_lock_ = true
metadata/_edit_group_ = true

[node name="Move" type="Button" parent="UIManager/ActionsContainer"]
layout_mode = 2
text = "Move"

[node name="TurnQueue" type="TextEdit" parent="UIManager"]
layout_mode = 2
offset_left = 328.0
offset_top = 48.0
offset_right = 784.0
offset_bottom = 104.0
text = "asdasd"

[node name="TurnTracker" type="Control" parent="UIManager"]
anchors_preset = 0
offset_left = 128.0
offset_top = 40.0
offset_right = 168.0
offset_bottom = 80.0
metadata/_edit_group_ = true
metadata/_edit_lock_ = true

[node name="ColorRect2" type="ColorRect" parent="UIManager/TurnTracker"]
layout_mode = 0
offset_right = 184.0
offset_bottom = 40.0
color = Color(0.309804, 0.533333, 0.411765, 1)

[node name="Turn" type="Label" parent="UIManager/TurnTracker"]
layout_mode = 0
offset_right = 64.0
offset_bottom = 30.0
text = "unit turn"
label_settings = SubResource("LabelSettings_guiso")

[node name="State" type="Label" parent="UIManager/TurnTracker"]
layout_mode = 0
offset_left = 128.0
offset_right = 176.0
offset_bottom = 30.0
text = "state"

[node name="BattleLog" type="Control" parent="UIManager"]
anchors_preset = 0
offset_left = 768.0
offset_top = 128.0
offset_right = 808.0
offset_bottom = 168.0
metadata/_edit_group_ = true
metadata/_edit_lock_ = true

[node name="ColorRect" type="ColorRect" parent="UIManager/BattleLog"]
layout_mode = 0
offset_right = 320.0
offset_bottom = 448.0
color = Color(0.47451, 0.611765, 0.65098, 1)

[node name="Log" type="RichTextLabel" parent="UIManager/BattleLog"]
layout_mode = 0
offset_right = 320.0
offset_bottom = 448.0
scroll_following = true
script = ExtResource("14_lgqmy")

[node name="BattleStart" type="Control" parent="UIManager"]
visible = false
anchors_preset = 0
offset_top = 192.0
offset_right = 40.0
offset_bottom = 232.0
metadata/_edit_group_ = true
metadata/_edit_lock_ = true

[node name="BattleStart" type="ColorRect" parent="UIManager/BattleStart"]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 200.0
color = Color(0.690196, 0.345098, 0.415686, 1)

[node name="TextEdit" type="TextEdit" parent="UIManager/BattleStart"]
layout_mode = 0
offset_left = 504.0
offset_top = 66.0
offset_right = 624.0
offset_bottom = 106.0
text = "BATTLE START"

[node name="BattleEnd" type="Control" parent="UIManager"]
visible = false
anchors_preset = 0
offset_top = 192.0
offset_right = 40.0
offset_bottom = 232.0
metadata/_edit_group_ = true
metadata/_edit_lock_ = true

[node name="BattleEnd" type="ColorRect" parent="UIManager/BattleEnd"]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 200.0
color = Color(0.690196, 0.345098, 0.415686, 1)

[node name="TextEdit" type="TextEdit" parent="UIManager/BattleEnd"]
layout_mode = 0
offset_left = 504.0
offset_top = 66.0
offset_right = 624.0
offset_bottom = 106.0
text = "BATTLE END"

[node name="BattleFieldAnchor" type="Control" parent="UIManager"]
anchors_preset = 0
offset_left = 128.0
offset_top = 128.0
offset_right = 168.0
offset_bottom = 168.0
metadata/_edit_lock_ = true

[node name="HighlightSprite" type="Sprite2D" parent="UIManager/BattleFieldAnchor"]

[node name="Change BF" type="Button" parent="UIManager"]
layout_mode = 0
offset_top = 64.0
offset_right = 64.0
offset_bottom = 128.0

[node name="AnimationManager" type="Node" parent="."]
script = ExtResource("15_27a2c")

[node name="AnimState" type="Node" parent="AnimationManager"]
script = ExtResource("3_n8q0w")

[node name="Free" type="Node" parent="AnimationManager/AnimState"]
script = ExtResource("16_i6t3l")

[node name="Ongoing" type="Node" parent="AnimationManager/AnimState"]
script = ExtResource("17_o8v8q")

[connection signal="pressed" from="UIManager/ActionsContainer/Move" to="BattleManager" method="_on_move_button_pressed"]
[connection signal="pressed" from="UIManager/ActionsContainer/Move" to="UIManager" method="_on_move_pressed"]
[connection signal="pressed" from="UIManager/Change BF" to="." method="_on_change_bf_pressed"]
